<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CustomerSc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpAdminScreen">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/sign_up_a_new_admin"
        style="@style/CustomTextStyle"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/adminemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/enter_e_mail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edtTxtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adminemail"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="numberPassword"
        android:autofillHints="" />

    <Button
        android:id="@+id/btncustomerSignUp"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtTxtPassword"
        android:layout_marginStart="100dp"
        android:layout_marginTop="75dp"
        android:text="@string/sign_up"
        style="@style/CustomButton"/>


</RelativeLayout>